<resources>
    <string name="app_name">LMS Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
    <string name="requested_books">Wishlist</string>
=======
    <string name="requested_books">Requested Books</string>
>>>>>>> main
    <string name="issued_books">Issued Books</string>
    <string name="books">Books</string>
    <string name="staff">Staff</string>
    <string name="my_account">My Account</string>
    <string name="title_books">Books</string>
    <string name="title_issuedBooks">Issued Books</string>
    <string name="title_issued_books">Issued Books</string>
    <string name="title_requested_books">Requested Books</string>
    <string name="title_staff">Staff</string>
    <string name="title_user">My Account</string>
</resources>