<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/books"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/books" />
    <item
        android:id="@+id/requested_books"
        android:icon="@drawable/baseline_post_add_24"
        android:title="@string/requested_books" />
    <item
        android:id="@+id/issued_books"
        android:icon="@drawable/baseline_library_books_24"
        android:title="@string/issued_books" />
    <item
        android:id="@+id/my_account"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/my_account" />

</menu>